--- a/CA2_Talents_Webapp/Views/Home/Main.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Main.cshtml
@@ -24,6 +24,11 @@
         display: inline-block;
         box-shadow: 0px -3px 6px 2px rgba(0,0,0,0.2);
     }
+    .talentImage {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
     #talentsDatatable th.sorting, #talentsDatatable th.sorting_asc {
         display: none;
@@ -45,7 +50,7 @@
         font-size: 1.6rem;
     }
 
-    .rewardsIconRow {
+    .talentIconRow {
         margin-top: 2rem;
     }
 
@@ -179,11 +184,11 @@
     </form>
 
     <!-- Delete Reward Modal Start-->
-    <div class="modal fade bd-example-modal-lg" id="deleteRewardModal" tabindex="-1" role="dialog" aria-labelledby="deleteRewardModalLabel" aria-hidden="true">
+    <div class="modal fade bd-example-modal-lg" id="deleteTalentModal" tabindex="-1" role="dialog" aria-labelledby="deleteTalentModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title" id="deleteRewardModalTitle">Delete Confirmation</h1>
+                    <h1 class="modal-title" id="deleteTalentModalTitle">Delete Confirmation</h1>
                     <button class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -336,20 +341,20 @@
                 let $cellElement = null;
                 //Start --- Defining the row element to hold
 
-                let $rowElement = $(`<tr name="manageRewardsTR" value="${i}"></tr>`);
+                let $rowElement = $(`<tr name="talentTr" value="${i}"></tr>`);
                 //$cellElement = $(`<td>${record.rowNumber}</td>`);
                 //Add dynamic ids later
                 $cellElement = $(`<td>
                             <div class="imgUp">
-                                <div class="imagePreview"></div>
-                                <label class="btn btn-primary" id="rewardsImgBtn${i}">
+                                <div class="imagePreview"><img class="talentImage" src="https://storetalentimages.s3-ap-southeast-1.amazonaws.com/` + talent.imageURL + `"></div>
+                                <label class="btn btn-primary" id="talentImgBtn${i}">
                                     Upload<input type="file" class="uploadFile img" id="uploadImgBtn${i}" value="Upload Photo" accept="image" disabled>
                                 </label>
                             </div><!-- col-2 -->
                         </td>`);
                 $rowElement.append($cellElement);
-                $cellElement = $(`<td><div  id="rewardContentColumn">
-                                <div class="rewardColumn">
+                $cellElement = $(`<td><div id="talentContentColumn">
+                                <div class="talentColumn">
                                     <div class="row">
                                         <p class="col-md-6 talentLabel">Title: </p>
                                         <p id="talentTitle${i}" class ="talentContent" onkeypress="return (this.innerText.length <= 16)">
@@ -372,15 +377,16 @@
                             </div></td>`);
                 $rowElement.append($cellElement);
 
-                $cellElement = $(`<td style="vertical-align: top;"><div id="rewardContentIconsColumn">
-                                <div class="flex-column" id="manageRewardIcons">
-                                    <div class="rewardsIconRow">
+                $cellElement = $(`<td style="vertical-align: top;"><div id="talentContentIconsColumn">
+                                <div class="flex-column" id="manageTalentIcons">
+                                    <div class="talentIconRow">
                                         <button id="cancelBtn${i}" onclick="cancelEdit(${i})" style="display:none">Cancel</button>
                                         <span aria-hidden="true" id="editIcon${i}" value="${i}" class="editIcon" onclick="toggleEditMode(${i})"><i id="iEdit${i}" class="far fa-edit"></i></span>
-                                        <span id="crossIcon${i}" aria-hidden="true" data-toggle="modal" data-target="#deleteRewardModal"
+                                        <span id="crossIcon${i}" aria-hidden="true" data-toggle="modal" data-target="#deleteTalentModal"
                                               onClick="insertDeleteVals(` + talent.talentId + `, '` + talent.talentName + `', '` + talent.talentTitle + `')"
                                               ><i class="fas fa-times"></i></span>
-                                        <p id="hiddenID${i}" hidden="true"><%=rewards.get(i).getRewardID()%></p>
+
+                                        <p id="hiddenID${i}" hidden="true"></p>
                                     </div>
                                     <input class="btn btn-primary commentBtnClass" onclick="goToDiscussion()" type="button" id="commentBtn" value="Comment">
                                 </div>
@@ -399,7 +405,7 @@
         for (var x = 0; x < noOfTalents; x++) {
             editIcon = document.getElementById("editIcon" + x); //+x
             uploadBtn = document.getElementById("uploadImgBtn" + x);
-            uploadBtnColor = document.getElementById("rewardsImgBtn" + x);
+            uploadBtnColor = document.getElementById("talentImgBtn" + x);
             talentTitle = document.getElementById("talentTitle" + x);
             cross = document.getElementById("crossIcon" + x);
             talentDesc = document.getElementById("talentDesc" + x);
@@ -413,7 +419,7 @@
                 html: true,
                 placement: 'bottom'
             });
-            $('tr[name="manageRewardsTR"]').hover(function () {
+            $('tr[name="talentTr"]').hover(function () {
                 trVal = $(this).attr("value");
                 $('#editIcon' + trVal).popover('show');
             }, function () {
@@ -485,11 +491,11 @@
             $('#talentTitle' + editIconID).attr("contenteditable", true);
             $('#talentDesc' + editIconID).attr("contenteditable", true);
             $('#talentName' + editIconID).attr("contenteditable", true);
-            $('#rewardsImgBtn' + editIconID).css("cursor", "pointer");
+            $('#talentImgBtn' + editIconID).css("cursor", "pointer");
             $('#iEdit' + editIconID).addClass('fas fa-check').removeClass('far fa-edit');
             $('#crossIcon' + editIconID).css("color", "red");
             $('#iEdit' + editIconID).css("color", "#33cc33");
-            $('#rewardsImgBtn' + editIconID).css("background-color", "#F8A909");
+            $('#talentImgBtn' + editIconID).css("background-color", "#F8A909");
 
             // Set hover for icons
             $('#crossIcon' + editIconID).hover(function () {
@@ -521,7 +527,7 @@
 
         } else if (editMode) {
             $('#cancelBtn' + editIconID).prop('disabled', true);
-            updateReward(editIconID);
+            updateTalent(editIconID);
         }
     }
 
@@ -595,8 +601,8 @@
         $('#iEdit' + editIconID).addClass('far fa-edit').removeClass('fas fa-check');
         $('#crossIcon' + editIconID).css("color", "lightgrey");
         $('#iEdit' + editIconID).css("color", "lightgrey");
-        $('#rewardsImgBtn' + editIconID).css("background-color", "#bababa");
-        $('#rewardsImgBtn' + editIconID).css("cursor", "default");
+        $('#talentImgBtn' + editIconID).css("background-color", "#bababa");
+        $('#talentImgBtn' + editIconID).css("cursor", "default");
         $('#crossIcon' + editIconID).hover(function () {
             $('#crossIcon' + editIconID).css("color", "lightgrey");
             $('#crossIcon' + editIconID).css("cursor", "default");
@@ -608,7 +614,7 @@
         }, function () {
             $('#iEdit' + editIconID).css("color", "lightgrey");
         });
-        $('tr[name="manageRewardsTR"]').hover(function () {
+        $('tr[name="talentTr"]').hover(function () {
             trVal = $(this).attr("value");
             $('#editIcon' + trVal).popover('show');
         }, function () {
@@ -624,7 +630,7 @@
         $('#cancelBtn' + editIconID).hide();
     }
 
-    //function updateReward(i) {
+    //function updateTalent(i) {
     //    var rewardID = $.trim($('#hiddenID' + i).text());
     //    var title = $.trim($('#talentTitle' + i).text());
     //    var description = $.trim($('#talentDesc' + i).text());
@@ -678,7 +684,7 @@
         }
 
     });
-
+    
     function getUrlParameter(sParam) {
         var sPageURL = window.location.search.substring(1),
             sURLVariables = sPageURL.split('&'),
