Update talent function working

--- a/CA2_Talents_Webapp/Views/Home/Main.cshtml
+++ b/CA2_Talents_Webapp/Views/Home/Main.cshtml
@@ -230,7 +230,7 @@
     </table>
 </div>
 
-<!-- Create Talnts Modal -->
+<!-- Create Talents Modal -->
 <div class="modal fade bd-example-modal-lg" id="createTalentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-right" role="document">
         <div class="modal-content">
@@ -298,10 +298,15 @@
 <script>
     $(document).ready(function () {
         var url = window.location.href;
-        var msgVal = url.split('?')[1].split('=');
-        msgVal.shift();
-        if (msgVal == "success") {
-            displaySuccessNoti("Talent successfully created.")
+        if (url.indexOf("?") > -1) {
+            //Contains param
+            var msgVal = url.split('?')[1].split('=');
+            msgVal.shift();
+            if (msgVal == "createSuccess") {
+                displaySuccessNoti("Talent successfully created.");
+            } else if (msgVal == "updateSuccess") {
+                displaySuccessNoti("Talent successfully updated.");
+            }
         }
     })
     //var rewardListLength = document.getElementById("rewardListLength").value;
@@ -346,7 +351,7 @@
                 //Add dynamic ids later
                 $cellElement = $(`<td>
                             <div class="imgUp">
-                                <div class="imagePreview"><img class="talentImage" src="https://storetalentimages.s3-ap-southeast-1.amazonaws.com/` + talent.imageURL + `"></div>
+                                <div class="imagePreview" id="imagePreview${i}"><img class="talentImage" id="talentImage${i}" src="https://storetalentimages.s3-ap-southeast-1.amazonaws.com/` + talent.imageURL + `"></div>
                                 <label class="btn btn-primary" id="talentImgBtn${i}">
                                     Upload<input type="file" class="uploadFile img" id="uploadImgBtn${i}" value="Upload Photo" accept="image" disabled>
                                 </label>
@@ -373,6 +378,8 @@
                                             ` + talent.talentDesc + `
                                         </p>
                                     </div>
+                                    <input type="hidden" id="talentId${i}" class="talentContent" value=` + talent.talentId + `>
+                                    <input type="hidden" id="imageUrl${i}" class="talentContent" value=` + talent.imageURL +  `>
                                 </div>
                             </div></td>`);
                 $rowElement.append($cellElement);
@@ -463,7 +470,7 @@
     var title;
     var description;
     var name;
-    
+
     function toggleEditMode(editIconID) {
 
         if (!editMode) { //add dynamic id here
@@ -566,6 +573,8 @@
                 reader.onloadend = function () { // set image data as background of div
                     //alert(uploadFile.closest(".upimage").find('.imagePreview').length);
                     uploadFile.closest(".imgUp").find('.imagePreview').css("background-image", "url(" + this.result + ")");
+                    uploadFile.closest(".imgUp").find('.talentImage').css("display", "none");
+
                 };
             }
         });
@@ -584,6 +593,8 @@
         document.getElementById('talentTitle' + editIconID).innerHTML = title;
         document.getElementById('talentDesc' + editIconID).innerHTML = description;
         document.getElementById('talentName' + editIconID).innerHTML = name;
+        document.getElementById('talentImage' + editIconID).style.display = "block";
+        $('#imagePreview' + editIconID).val(null);
 
         msg = "Editing mode disabled";
         displayFailNoti(msg);
@@ -630,35 +641,44 @@
         $('#cancelBtn' + editIconID).hide();
     }
 
-    //function updateTalent(i) {
-    //    var rewardID = $.trim($('#hiddenID' + i).text());
-    //    var title = $.trim($('#talentTitle' + i).text());
-    //    var description = $.trim($('#talentDesc' + i).text());
-    //    var name = $.trim($('#talentName' + i).text());
+    function updateTalent(i) {
+        event.preventDefault();
+        var talentId = $.trim($('#talentId' + i).val());
+        var title = $.trim($('#talentTitle' + i).text());
+        var description = $.trim($('#talentDesc' + i).text());
+        var name = $.trim($('#talentName' + i).text());
+        var fileInput = document.getElementById("uploadImgBtn" + i);
+        var file = fileInput.files[0];
+        var formData = new FormData();
+        formData.append('talentImgFile', file);
+        formData.append('TalentTitle', title);
+        formData.append('TalentName', name);
+        formData.append('TalentDesc', description);
+        formData.append('TalentId', talentId);
+        formData.append('CreatedBy', $('#createdByName').val());
+        formData.append('UpdatedBy', $('#createdByName').val());
+        formData.append('ImageURL', $('#imageUrl' + i).val());
 
-    //    $.ajax({
-    //        url: '../GIE_EditRewardServlet',
-    //        type: 'post',
-    //        data: {
-    //            rewardID: rewardID,
-    //            name: name,
-    //            description: description,
-    //            title: title,
-    //        },
-    //        success: function (result) {
-    //            if (result === "Reward updated successfully") {
-    //                window.location.href = "../GIE_AllRewardsServlet?Msg=" + result;
-    //            } else {
-    //                var msg = "Reward update failed";
-    //                window.location.href = "../GIE_AllRewardsServlet?Msg=" + msg;
-    //            }
-    //        },
-    //        error: function () {
-    //            var msg = "Reward update failed";
-    //            window.location.href = "../GIE_AllRewardsServlet?Msg=" + msg;
-    //        }
-    //    });
-    //}
+        $.ajax({
+            url: '/Talent/UpdateTalent',
+            method: 'POST',
+            processData: false,
+            contentType: false,
+            async: false,
+            data: formData,
+            success: function (data) {
+                if (data == "NSFW") {
+                    displayFailNoti("Update of talent failed. Sensitive image detected");
+                } else {
+                    window.location.href = location.href + "?msg=updateSuccess"
+                }
+            },
+            error: function () {
+                displayFailNoti("Update of talent failed.");
+            }
+
+        });
+    }
 
     $(document).ready(function () {
         var msg = getUrlParameter("Msg");
@@ -684,7 +704,7 @@
         }
 
     });
-    
+
     function getUrlParameter(sParam) {
         var sPageURL = window.location.search.substring(1),
             sURLVariables = sPageURL.split('&'),
@@ -726,11 +746,11 @@
                 if (data == "NSFW") {
                     displayFailNoti("Creation of talent failed. Sensitive image detected");
                 } else {
-                    window.location.href = location.href + "?msg=success"
+                    window.location.href = location.href + "?msg=createSuccess"
                 }
             },
             error: function () {
-                alert("Error");
+                displayFailNoti("Creation of talent failed.")
             }
         });
     }
